force-app/main/default/objects/Responsable__c/Responsable__c.object-meta.xml
<CustomObject>
    <label>Staff</label>
    <nameField>
        <label>Nombre de Staff</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>