force-app/main/default/objects/Responsable__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>