force-app/main/default/objects/Responsable__c/fields/CUIL__c.field-meta.xml
<CustomField>
    <fullName>CUIL__c</fullName>
    <label>CUIL</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>