force-app/main/default/objects/Responsable__c/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <label>DNI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>