force-app/main/default/objects/Responsable__c/fields/Foto__c.field-meta.xml
<CustomField>
    <fullName>Foto__c</fullName>
    <label>Foto</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>