force-app/main/default/objects/Responsable__c/fields/Titulo__c.field-meta.xml
<CustomField>
    <fullName>Titulo__c</fullName>
    <label>Titulo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>